--- a/category.html
+++ b/category.html
@@ -13,8 +13,8 @@
       font-weight: 800;
       letter-spacing: 1px;
       margin-top: 25px;
-      margin-left: 40px; /* 🔹 трохи вправо */
-      text-align: left; /* вирівнюємо по лівому краю */
+      text-align: center;
+      transform: translateX(-10%);
       display: inline-block;
       position: relative;
       
