--- a/category.html
+++ b/category.html
@@ -13,8 +13,8 @@
       font-weight: 800;
       letter-spacing: 1px;
       margin-top: 25px;
-      text-align: center;
-      transform: translateX(-10%);
+      text-align: left;
+      margin-left: 120px;
       display: inline-block;
       position: relative;
       
