--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       .from("films_site")
       .select("id, title, poster, top")
       .or("top.ilike.%ТОП%, top.ilike.%топ%")   // шукаємо ті, де поле top містить слово "ТОП"
+      .not("poster", "is", null)
       .limit(10);
 
     if (error) {
@@ -270,6 +271,7 @@
 
 </body>
 </html>
+
 
 
 
