--- a/index.html
+++ b/index.html
@@ -220,8 +220,9 @@ async function loadTopFilms() {
 
   const { data, error } = await supabase
     .from("films_site")
-    .select("id, title, poster")
-    .order("id", { ascending: false })
+    .select("id, title, poster, top")
+    .or("top.ilike.%ТОП%,top.ilike.%топ%")  // ✅ правильний синтаксис
+    .not("poster", "is", null)
     .limit(10);
 
   if (error) {
@@ -231,12 +232,15 @@ async function loadTopFilms() {
   }
 
   if (!data || data.length === 0) {
-    slider.innerHTML = `<p style="color:white;">Немає фільмів для банеру.</p>`;
+    slider.innerHTML = `<p style="color:white;">Немає фільмів у ТОПі.</p>`;
     return;
   }
 
+  // 🟣 Випадкове перемішування (якщо хочеш)
+  const shuffled = data.sort(() => Math.random() - 0.5);
+
   slider.innerHTML = "";
-  data.forEach(film => {
+  shuffled.forEach(film => {
     const card = document.createElement("div");
     card.className = "slide";
     card.innerHTML = `
@@ -255,6 +259,7 @@ async function loadTopFilms() {
 
 </body>
 </html>
+
 
 
 
