--- a/index.html
+++ b/index.html
@@ -211,54 +211,63 @@
   }
 
   // 🚀 Запускаємо після завантаження сторінки
-
-// 🔥 Завантаження Топ 10 фільмів у банер
-async function loadTopFilms() {
-  const slider = document.getElementById("sliderRow");
-  if (!slider) return;
-  slider.innerHTML = "<p style='color:#aaa;'>Завантаження...</p>";
+</script>
+<script>
+async function loadLatestFilms() {
+  const container = document.getElementById("films-list");
+  if (!container) return;
+  container.innerHTML = "<p style='color:#aaa;'>Завантаження...</p>";
 
   const { data, error } = await supabase
     .from("films_site")
-    .select("id, title, poster, top")
-    .or("top.ilike.%ТОП%,top.ilike.%топ%")  // ✅ правильний синтаксис
-    .not("poster", "is", null)
-    .limit(10);
+    .select("*")                         // ← беремо все, щоб не падало на неіснуючих полях
+    .order("id", { ascending: false })   // або .order("inserted_at", { ascending:false }) якщо треба
+    .limit(20);
 
   if (error) {
-    console.error("❌ Помилка ТОП:", error);
-    slider.innerHTML = `<p style="color:white;">Помилка завантаження.</p>`;
+    console.error("❌ Latest error:", error);
+    container.innerHTML = `<p style="color:white;">Помилка завантаження.</p>`;
     return;
   }
-
   if (!data || data.length === 0) {
-    slider.innerHTML = `<p style="color:white;">Немає фільмів у ТОПі.</p>`;
+    container.innerHTML = `<p style="color:white;">Поки що немає надходжень.</p>`;
     return;
   }
 
-  // 🟣 Випадкове перемішування (якщо хочеш)
-  const shuffled = data.sort(() => Math.random() - 0.5);
-
-  slider.innerHTML = "";
-  shuffled.forEach(film => {
+  container.innerHTML = "";
+  data.forEach(film => {
     const card = document.createElement("div");
-    card.className = "slide";
+    card.className = "film";
     card.innerHTML = `
-      <img src="${film.poster || 'https://via.placeholder.com/200x300?text=No+Image'}" alt="${film.title}">
-      <p>${film.title}</p>
+      <div class="poster">
+        <img src="${film.poster || 'https://via.placeholder.com/200x300?text=No+Image'}" alt="${film.title || ''}">
+        ${String(film.pro_access || '').toUpperCase() === 'PRO' ? '<span class="badge plus">PRO</span>' : ''}
+      </div>
+      <div class="title">${film.title || ''}</div>
+      <div class="meta">
+        <span>${film.genre || ''}</span> • 
+        <span>${film.year || ''}</span> • 
+        <span>IMDb: ${film.imdb || '—'}</span>
+      </div>
     `;
     card.addEventListener("click", () => {
-      window.location.href = \`film.html?id=\${film.id}\`;
+      window.location.href = `film.html?id=${film.id}`;
     });
-    slider.appendChild(card);
+    container.appendChild(card);
   });
 }
-
-
+</script>
+<script>
+  // 🚀 Автоматичне завантаження при відкритті сторінки
+  document.addEventListener("DOMContentLoaded", () => {
+    loadLatestFilms();
+    loadTopFilms();
+  });
 </script>
 
 </body>
 </html>
+
 
 
 
