--- a/header.html
+++ b/header.html
@@ -82,7 +82,7 @@
 </div>
 
 <a href="#">Новинки</a>
-<a href="#">Збірки фільмів</a>
+<a href="/collections.html">Збірки фільмів</a>
 </nav>
 
 <!-- === ПРАВА ЧАСТИНА === -->
