--- a/collections.html
+++ b/collections.html
@@ -32,58 +32,46 @@
   const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE";
   const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
-  // === Нові назви збірок ===
-  const collections = [
-    "Фантастика, що вражає уяву",
-    "Найстрашніші фільми жахів",
-    "Обов’язкові до перегляду фільми",
-    "Комедії, що піднімуть настрій",
-    "Адреналін і швидкість — про гонки",
-    "Фільми про танці та музику",
-    "Новорічний і різдвяний настрій",
-    "Фільми про виживання",
-    "Історії, засновані на реальних подіях",
-    "Кіно про собак 🐾",
-    "Мафія, гангстери та бандити",
-    "Шпигуни, агенти й спецоперації",
-    "Маніяки, психопати та трилери",
-    "Штучний інтелект і технології майбутнього",
-    "Життя за ґратами — фільми про тюрму",
-    "Пограбування, афери та трюки",
-    "Апокаліпсис і кінець світу",
-    "Майбутнє людства",
-    "Подорожі у часі ⏳",
-    "Лицарі, королі та середньовіччя",
-    "Прибульці та інопланетяни 👽",
-    "Фільми про космос",
-    "Фентезі: орки, ельфи й чарівні істоти",
-    "Фільми про акул 🦈",
-    "Динозаври та дракони",
-    "Відьми, чаклуни й магія",
-    "Привиди, демони та потойбічне",
-    "Магічні історії",
-    "Студенти, коледжі й братства",
-    "Зомбі-апокаліпсис",
-    "Вампірські історії та перевертні",
-    "Світ Marvel 🦸‍♂️",
-    "Шкільні історії та підліткові пригоди",
-    "Віруси, епідемії та катастрофи",
-    "Фільми про кохання 💞",
-    "Улюблені фільми Disney"
-  ];
+  // === Збірки з картинками ===
+const collections = [
+  { name: "Фантастика, що вражає уяву", image: "https://i.postimg.cc/hGPmL7xV/fantasy.jpg" },
+  { name: "Найстрашніші фільми жахів", image: "https://i.postimg.cc/fyCNt8kP/horror.jpg" },
+  { name: "Обов’язкові до перегляду фільми", image: "https://i.postimg.cc/GpZKQ4zH/mustsee.jpg" },
+  { name: "Комедії, що піднімуть настрій", image: "https://i.postimg.cc/wT0hQ7C7/comedy.jpg" },
+  { name: "Адреналін і швидкість — про гонки", image: "https://i.postimg.cc/GmHb7YvS/racing.jpg" },
+  { name: "Фільми про танці та музику", image: "https://i.postimg.cc/PqMnpWbF/dance.jpg" },
+  { name: "Новорічний і різдвяний настрій", image: "https://i.postimg.cc/KvC4ZLqm/christmas.jpg" },
+  { name: "Фільми про виживання", image: "https://i.postimg.cc/4yNsfCtW/survival.jpg" },
+  { name: "Історії, засновані на реальних подіях", image: "https://i.postimg.cc/JzvZbg4S/realstory.jpg" },
+  { name: "Кіно про собак 🐾", image: "https://i.postimg.cc/8PmXvvTt/dogs.jpg" },
+  { name: "Мафія, гангстери та бандити", image: "https://i.postimg.cc/pXJzY7hx/mafia.jpg" },
+  { name: "Шпигуни, агенти й спецоперації", image: "https://i.postimg.cc/vmH3sWv8/spies.jpg" },
+  { name: "Маніяки, психопати та трилери", image: "https://i.postimg.cc/tCxTsbp8/thriller.jpg" },
+  { name: "Штучний інтелект і технології майбутнього", image: "https://i.postimg.cc/Dz9tST5T/ai.jpg" },
+  { name: "Життя за ґратами — фільми про тюрму", image: "https://i.postimg.cc/vZHq0dYB/prison.jpg" },
+  { name: "Пограбування, афери та трюки", image: "https://i.postimg.cc/1t0Gm44T/heist.jpg" },
+  { name: "Апокаліпсис і кінець світу", image: "https://i.postimg.cc/cLj319nG/images.jpg" },
+  { name: "Фільми про кохання 💞", image: "https://i.postimg.cc/T2DCnhhH/love.jpg" },
+  { name: "Фільми про космос", image: "https://i.postimg.cc/Z5JtwYxV/space.jpg" },
+  { name: "Улюблені фільми Disney", image: "https://i.postimg.cc/FsGdmF1R/disney.jpg" },
+];
+
 
   const list = document.getElementById("collectionsList");
 
-  // Створюємо картки збірок
-  collections.forEach(name => {
-    const div = document.createElement("div");
-    div.className = "collection-card";
-    div.innerHTML = `
-      <h3>${name}</h3>
-      <button onclick="openCollection('${name}')">Відкрити</button>
-    `;
-    list.appendChild(div);
-  });
+  collections.forEach(item => {
+  const div = document.createElement("div");
+  div.className = "collection-card";
+  div.innerHTML = `
+    <img src="${item.image}" alt="${item.name}">
+    <div class="overlay">
+      <h3>${item.name}</h3>
+      <button onclick="openCollection('${item.name}')">Відкрити</button>
+    </div>
+  `;
+  list.appendChild(div);
+});
+
 
   // Відкриваємо сторінку збірки
   function openCollection(name) {
@@ -139,6 +127,59 @@
   .collection-card button:hover {
     background: linear-gradient(90deg, #00e5ff, #008cff);
   }
+
+  .collection-card {
+  position: relative;
+  overflow: hidden;
+  border-radius: 12px;
+  border: 1px solid #222;
+  transition: transform 0.25s ease, box-shadow 0.25s ease;
+  cursor: pointer;
+}
+
+.collection-card img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  filter: brightness(0.75);
+  transition: 0.3s;
+}
+
+.collection-card:hover img {
+  transform: scale(1.05);
+  filter: brightness(0.9);
+}
+
+.collection-card .overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 15px;
+  background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);
+  text-align: center;
+}
+
+.collection-card h3 {
+  font-size: 15px;
+  color: #00ffff;
+  margin-bottom: 10px;
+  text-shadow: 0 0 5px #000;
+}
+
+.collection-card button {
+  background: linear-gradient(90deg, #00bcd4, #0066ff);
+  color: white;
+  border: none;
+  border-radius: 8px;
+  padding: 6px 14px;
+  cursor: pointer;
+  transition: 0.2s;
+}
+.collection-card button:hover {
+  background: linear-gradient(90deg, #00e5ff, #008cff);
+}
+
 </style>
 
 </body>
