--- a/collections.html
+++ b/collections.html
@@ -50,7 +50,7 @@ const collections = [
   { name: "Штучний інтелект і технології майбутнього", image: "https://i.postimg.cc/Dz9tST5T/ai.jpg" },
   { name: "Життя за ґратами — фільми про тюрму", image: "https://i.postimg.cc/vZHq0dYB/prison.jpg" },
   { name: "Пограбування, афери та трюки", image: "https://i.postimg.cc/1t0Gm44T/heist.jpg" },
-  { name: "Апокаліпсис і кінець світу", image: "https://i.postimg.cc/cLj319nG/images.jpg" },
+  { name: "Апокаліпсис і кінець світу", image: "https://i.ibb.co/1GtvQVVX/images.jpg" },
   { name: "Фільми про кохання 💞", image: "https://i.postimg.cc/T2DCnhhH/love.jpg" },
   { name: "Фільми про космос", image: "https://i.postimg.cc/Z5JtwYxV/space.jpg" },
   { name: "Улюблені фільми Disney", image: "https://i.postimg.cc/FsGdmF1R/disney.jpg" },
