--- a/collections.html
+++ b/collections.html
@@ -59,16 +59,16 @@ const collections = [
 
   const list = document.getElementById("collectionsList");
 
-  collections.forEach(item => {
+ collections.forEach(item => {
   const div = document.createElement("div");
   div.className = "collection-card";
   div.innerHTML = `
     <img src="${item.image}" alt="${item.name}">
     <div class="overlay">
       <h3>${item.name}</h3>
-      <button onclick="openCollection('${item.name}')">Відкрити</button>
     </div>
   `;
+  div.addEventListener("click", () => openCollection(item.name));
   list.appendChild(div);
 });
 
@@ -98,23 +98,12 @@ const collections = [
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     gap: 20px;
-  }
-  .collection-card {
-    background: #111;
-    border: 1px solid #222;
-    border-radius: 12px;
-    padding: 20px;
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
-  }
+  
   .collection-card:hover {
     transform: translateY(-5px);
     box-shadow: 0 0 15px rgba(0,255,255,0.3);
   }
-  .collection-card h3 {
-    font-size: 16px;
-    color: #00ffff;
-    margin-bottom: 15px;
-  }
+ 
   .collection-card button {
     background: linear-gradient(90deg, #00bcd4, #0066ff);
     color: white;
@@ -128,7 +117,19 @@ const collections = [
     background: linear-gradient(90deg, #00e5ff, #008cff);
   }
 
-  .collection-card {
+.collection-card button {
+  background: linear-gradient(90deg, #00bcd4, #0066ff);
+  color: white;
+  border: none;
+  border-radius: 8px;
+  padding: 6px 14px;
+  cursor: pointer;
+  transition: 0.2s;
+}
+.collection-card button:hover {
+  background: linear-gradient(90deg, #00e5ff, #008cff);
+}
+.collection-card {
   position: relative;
   overflow: hidden;
   border-radius: 12px;
@@ -139,9 +140,9 @@ const collections = [
 
 .collection-card img {
   width: 100%;
-  height: 180px;
+  height: 200px;
   object-fit: cover;
-  filter: brightness(0.75);
+  filter: brightness(0.7);
   transition: 0.3s;
 }
 
@@ -155,29 +156,16 @@ const collections = [
   bottom: 0;
   left: 0;
   right: 0;
-  padding: 15px;
   background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);
   text-align: center;
+  padding: 15px 10px;
 }
 
 .collection-card h3 {
   font-size: 15px;
   color: #00ffff;
-  margin-bottom: 10px;
+  margin: 0;
   text-shadow: 0 0 5px #000;
-}
-
-.collection-card button {
-  background: linear-gradient(90deg, #00bcd4, #0066ff);
-  color: white;
-  border: none;
-  border-radius: 8px;
-  padding: 6px 14px;
-  cursor: pointer;
-  transition: 0.2s;
-}
-.collection-card button:hover {
-  background: linear-gradient(90deg, #00e5ff, #008cff);
 }
 
 </style>
