--- a/collection.html
+++ b/collection.html
@@ -71,6 +71,69 @@
 
   document.addEventListener("DOMContentLoaded", loadCollection);
 </script>
+<style>
+/* Сітка фільмів */
+.film-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr)); /* ✅ менші картки */
+  gap: 18px;
+  padding: 20px;
+  justify-items: center;
+}
+
+/* Картка фільму */
+.film {
+  background: #111;
+  border-radius: 10px;
+  overflow: hidden;
+  cursor: pointer;
+  border: 1px solid rgba(0,255,255,0.15);
+  transition: transform 0.25s ease, box-shadow 0.25s ease;
+  width: 160px; /* ✅ зменшення ширини */
+}
+
+.film:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 15px rgba(0,255,255,0.25);
+}
+
+/* Зображення */
+.film .poster img {
+  width: 100%;
+  height: 220px; /* ✅ нижча висота постера */
+  object-fit: cover;
+  border-bottom: 1px solid rgba(0,255,255,0.1);
+}
+
+/* Назва фільму */
+.film .title {
+  color: #fff;
+  font-size: 14px; /* ✅ менше шрифт */
+  font-weight: 600;
+  text-align: center;
+  margin: 8px 0 4px;
+}
+
+/* Метадані (жанр, рік) */
+.film .meta {
+  color: #aaa;
+  font-size: 12px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+/* PRO-бейдж */
+.badge.plus {
+  position: absolute;
+  top: 8px;
+  left: 8px;
+  background: linear-gradient(90deg, #ff00cc, #3333ff);
+  padding: 2px 6px;
+  font-size: 10px;
+  border-radius: 6px;
+  color: #fff;
+}
+</style>
 
 </body>
 </html>
