--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
       <h2>Останні надходження</h2>
     </div>
     <div id="films-list" class="film-grid"></div>
+    <div class="block" style="margin-top:24px">
+      <h2>🧩 Нові серіали</h2>
+    </div>
+    <div id="series-list" class="film-grid"></div>
 
     <div class="pagination">
       <button>«</button>
@@ -164,51 +168,99 @@
   const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE";
   const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
-  // 🎬 Завантаження останніх надходжень
-  async function loadLatestFilms() {
-    const container = document.getElementById("films-list");
-    if (!container) return;
-    container.innerHTML = "<p style='color:#aaa;'>Завантаження...</p>";
+<script>
+async function loadLatestFilms() {
+  const container = document.getElementById("films-list");
+  if (!container) return;
+  container.innerHTML = "<p style='color:#aaa;'>Завантаження...</p>";
 
-    const { data, error } = await supabase
-      .from("films_site")
-      .select("*")
-      .order("id", { ascending: false })
-      .limit(20);
+  const { data, error } = await supabase
+    .from("films_site")
+    .select("*")
+    .eq("type", "Фільм")
+    .order("id", { ascending: false })
+    .limit(20);
 
-    if (error) {
-      console.error("❌ Помилка завантаження останніх:", error);
-      container.innerHTML = `<p style="color:white;">Помилка завантаження.</p>`;
-      return;
-    }
-
-    if (!data?.length) {
-      container.innerHTML = `<p style="color:white;">Поки що немає надходжень.</p>`;
-      return;
-    }
-
-    container.innerHTML = "";
-    data.forEach(film => {
-      const card = document.createElement("div");
-      card.className = "film";
-      card.innerHTML = `
-        <div class="poster">
-          <img src="${film.poster || 'https://via.placeholder.com/200x300?text=No+Image'}" alt="${film.title || ''}">
-          ${String(film.pro_access || '').toUpperCase() === 'PRO' ? '<span class="badge plus">PRO</span>' : ''}
-        </div>
-        <div class="title">${film.title || ''}</div>
-        <div class="meta">
-          <span>${film.genre || ''}</span> • 
-          <span>${film.year || ''}</span> • 
-          <span>IMDb: ${film.imdb || '—'}</span>
-        </div>
-      `;
-      card.addEventListener("click", () => {
-        window.location.href = "film.html?id=" + film.id;
-      });
-      container.appendChild(card);
-    });
+  if (error) {
+    console.error("❌ Помилка завантаження останніх:", error);
+    container.innerHTML = `<p style="color:white;">Помилка завантаження.</p>`;
+    return;
   }
+  if (!data?.length) {
+    container.innerHTML = `<p style="color:white;">Поки що немає надходжень.</p>`;
+    return;
+  }
+
+  container.innerHTML = "";
+  data.forEach(item => {
+    const card = document.createElement("div");
+    card.className = "film";
+    card.innerHTML = `
+      <div class="poster">
+        <img src="${item.poster || 'https://via.placeholder.com/200x300?text=No+Image'}" alt="${item.title || ''}">
+        ${String(item.pro_access || '').toUpperCase() === 'PRO' ? '<span class="badge plus">PRO</span>' : ''}
+      </div>
+      <div class="title">${item.title || ''}</div>
+      <div class="meta">
+        <span>${item.genre || ''}</span> • 
+        <span>${item.year || ''}</span> • 
+        <span>IMDb: ${item.imdb || '—'}</span>
+      </div>
+    `;
+    card.addEventListener("click", () => {
+      window.location.href = "film.html?id=" + item.id;
+    });
+    container.appendChild(card);
+  });
+}
+</script>
+<script>
+async function loadLatestSeries() {
+  const container = document.getElementById("series-list");
+  if (!container) return;
+  container.innerHTML = "<p style='color:#aaa;'>Завантаження...</p>";
+
+  const { data, error } = await supabase
+    .from("films_site")
+    .select("title, poster, id, type, season, episode")
+    .eq("type", "Серіал")
+    .order("id", { ascending: false })
+    .limit(40); // беремо більше, бо будемо групувати
+
+  if (error) {
+    console.error("❌ Помилка завантаження серіалів:", error);
+    container.innerHTML = `<p style="color:white;">Помилка завантаження.</p>`;
+    return;
+  }
+  if (!data?.length) {
+    container.innerHTML = `<p style="color:white;">Немає серіалів.</p>`;
+    return;
+  }
+
+  // Групуємо унікальні серіали за title (щоб не дублювати кожну серію)
+  const map = new Map();
+  data.forEach(row => {
+    if (!map.has(row.title)) map.set(row.title, row);
+  });
+
+  container.innerHTML = "";
+  [...map.values()].forEach(series => {
+    const card = document.createElement("div");
+    card.className = "film";
+    card.innerHTML = `
+      <div class="poster">
+        <img src="${series.poster || 'https://via.placeholder.com/200x300?text=No+Image'}" alt="${series.title}">
+      </div>
+      <div class="title">${series.title}</div>
+      <div class="meta"><span>Серіал</span></div>
+    `;
+    card.addEventListener("click", () => {
+      window.location.href = "series.html?title=" + encodeURIComponent(series.title);
+    });
+    container.appendChild(card);
+  });
+}
+</script>
 
   // 🔥 Завантаження Топ-10 фільмів
   async function loadTopFilms() {
@@ -253,6 +305,7 @@
   // 🚀 Автоматичний запуск
   document.addEventListener("DOMContentLoaded", () => {
     loadLatestFilms();
+    loadLatestSeries();
     loadTopFilms();
   });
 </script>
@@ -260,6 +313,7 @@
 
 </body>
 </html>
+
 
 
 
