--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
   const supabaseUrl = "https://zerlqvbmqszomlondlte.supabase.co";
   const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InplcmxxdmJtcXN6b21sb25kbHRlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzg3NzQsImV4cCI6MjA3MDkxNDc3NH0.8wUBYIeQRC6KVp6vdzv0oqofIf4PeZyzbV5GcD0vxTE";
   const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
-
+</script>
 <script>
 async function loadLatestFilms() {
   const container = document.getElementById("films-list");
@@ -313,6 +313,7 @@ async function loadLatestSeries() {
 
 </body>
 </html>
+
 
 
 
