--- a/index.html
+++ b/index.html
@@ -260,8 +260,9 @@ async function loadLatestSeries() {
     container.appendChild(card);
   });
 }
-</script>
 
+</script>
+<script>
   // 🔥 Завантаження Топ-10 фільмів
   async function loadTopFilms() {
     const slider = document.getElementById("sliderRow");
@@ -313,6 +314,7 @@ async function loadLatestSeries() {
 
 </body>
 </html>
+
 
 
 
