--- a/header.html
+++ b/header.html
@@ -57,29 +57,8 @@
   </div>
 </div>
 
-<!-- === МЕНЮ МУЛЬТФІЛЬМИ === -->
-<div class="dropdown">
-  <a href="#" class="menu-cartoons">Мультфільми</a>
-  <div class="mega-menu mega-cartoons">
-    <div class="genres">
-      <a href="/category.html?type=Мультфільм&genre=Всі мультики">Всі мультики</a>
-      <a href="/category.html?type=Мультфільм&genre=Повнометражні">Повнометражні</a>
-      <a href="/category.html?type=Мультфільм&genre=Короткометражні">Короткометражні</a>
-      <a href="/category.html?type=Мультфільм&genre=Мультсеріали">Мультсеріали</a>
-      <a href="/category.html?type=Мультфільм&genre=Відомі мультсеріали">Відомі мультсеріали</a>
-      <a href="/category.html?type=Мультфільм&genre=Студії">Студії</a>
-      <a href="/category.html?type=Мультфільм&genre=Netflix">Netflix</a>
-      <a href="/category.html?type=Мультфільм&genre=DreamWorks">DreamWorks</a>
-      <a href="/category.html?type=Мультфільм&genre=Pixar">Pixar</a>
-      <a href="/category.html?type=Мультфільм&genre=WB Анімація">WB: Анімація</a>
-      <a href="/category.html?type=Мультфільм&genre=Теми">Теми</a>
-      <a href="/category.html?type=Мультфільм&genre=Для дорослих">Для дорослих</a>
-      <a href="/category.html?type=Мультфільм&genre=Про роботів">Про роботів</a>
-      <a href="/category.html?type=Мультфільм&genre=Пластилінова анімація">Пластилінова анімація</a>
-      <a href="/category.html?type=Мультфільм&genre=Новорічні">Новорічні</a>
-    </div>
-  </div>
-</div>
+<a href="/category.html?type=Мультфільм">Мультфільми</a>
+<a href="/category.html?type=Мультсеріал">Мультсеріали</a>
 
 <a href="#">Новинки</a>
 <a href="/collections.html">Збірки фільмів</a>
